Update question text
IPO have asked for this amendment

https://trello.com/c/Eiok87Mu/1490-minor-content-change-to-intellectual-property-question

--- a/app/lib/brexit_checker/questions.yaml
+++ b/app/lib/brexit_checker/questions.yaml
@@ -291,7 +291,7 @@ questions:
     type: "single_wrapped"
     text: "Do you use or rely on intellectual property (IP) protection?"
     description: |
-      <p>Intellectual property protection includes copyright, trade marks and patents.</p>
+      <p>Intellectual property protection includes copyright, trade marks, patents and designs.</p>
     options:
       - label: "Yes"
         value: ip
