--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "standardx": "^7.0.0",
     "stylelint": "^13.13.1",
     "stylelint-config-gds": "^0.1.0"
+  },
+  "dependencies": {
+    "custom-event-polyfill": "^1.0.7"
   }
 }
