--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -14,6 +14,7 @@ src_files:
   - spec/javascripts/vendor/jquery-1.12.4.js
   - spec/javascripts/vendor/jasmine-ajax-3.4.0.js
   - assets/application.js
+  - assets/test-dependencies.js
 
 # stylesheets
 #
