--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,7 +20,9 @@ updates:
       # Framework gems
       - dependency-name: factory_bot
         dependency-type: direct
-      - dependency-name: jasmine
+      - dependency-name: jasmine-browser-runner
+        dependency-type: direct
+      - dependency-name: jasmine-core
         dependency-type: direct
       - dependency-name: rails
         dependency-type: direct
