Fix Plek URL for Static in development
This updates the URLs to use the asset domain and use HTTPS. This
is required for the Static proxy to correctly forward request.

--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
       "value": "https://www.gov.uk/api"
     },
     "PLEK_SERVICE_STATIC_URI": {
-      "value": "assets.digital.cabinet-office.gov.uk"
+      "value": "https://assets.publishing.service.gov.uk"
     },
     "PLEK_SERVICE_SEARCH_URI": {
       "value": "https://www.gov.uk/api"
