Removed warning from the option scroll docs
Removed the warning text because Axe have removed the restoreScroll option from
their API.

[Setting restoreScroll was removed from accessibility-test.js](https://github.com/alphagov/govuk_publishing_components/commit/07624c61e6c6a5d8174daff6214150a0ca25b8f3)
as part of this govuk_publishing_components-32.1.0 release.

--- a/app/views/components/docs/option-select.yml
+++ b/app/views/components/docs/option-select.yml
@@ -1,9 +1,7 @@
 name: Option select
 description: A scrollable list of checkboxes to be displayed on a form where one might
   otherwise use a multi-select
-body: |
-  There is a bug where the option select will be scrolled to the bottom when the component is tested using Axe in Internet Explorer 10 and 11. This bug is not present when Axe and the test is not run, so is not seen when in production. This is caused by the `TODO:` SVG patch on line 32 of `accessibility-test.js` setting `restoreScroll` to `false`.
-
+body:
 accessibility_criteria: |
   The option select must:
 
