--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,18 @@
+.dockerignore
 .git
 .gitignore
+.github
+Dockerfile
+Jenkinsfile
+Procfile
 README.md
-log/*
+coverage
+docs
+features
+log
+node_modules
+script
+spec
+test
+tmp
+vendor
