--- a/app/views/components/docs/filter_panel.yml
+++ b/app/views/components/docs/filter_panel.yml
@@ -11,3 +11,12 @@ examples:
         <p class="govuk-body">
           I can contain arbitrary content, usually a set of filters and sort options.
         </p>
+  with_margin_bottom:
+    description: |
+      Allows the spacing at the bottom of the component to be adjusted.
+
+      This accepts a number from `0` to `9` (`0px` to `60px`) using the [GOV.UK Frontend spacing scale](https://design-system.service.gov.uk/styles/spacing/#the-responsive-spacing-scale). It defaults to having no margin bottom.
+    data:
+      result_count: 1
+      button_text: Loooooads of space
+      margin_bottom: 9
