Filter section component
add rspec tests

restructure sass and class names

remove uneccessary container element

final tweaks

add demo sections to search page and fix border styling

address PR review comments

final PR comment fixes

implemented the section heading as being a heading tag, level of which can be supplied to the component

amend focus styling to requirements

--- a/app/views/components/docs/filter_panel.yml
+++ b/app/views/components/docs/filter_panel.yml
@@ -31,6 +31,19 @@ examples:
         <p class="govuk-body">
           I am open by default!
         </p>
+  with_filter_section:
+    description: |
+      Pass filter section component as a block
+    data:
+      result_count: 1
+      button_text: View filter section
+      block: |
+        <%= render "components/filter_section", {
+          status_text: "1 Selected",
+          heading_text: "Filter 1"
+        } do %>
+          <span>filter section content</span>
+        <% end %>
   with_margin_bottom:
     description: |
       Allows the spacing at the bottom of the component to be adjusted.
