--- a/app/views/components/docs/filter_section.yml
+++ b/app/views/components/docs/filter_section.yml
@@ -15,18 +15,25 @@ accessibility_criteria: |
 examples:
   default:
     data:
-      heading_text: Filter by something
+      heading_text: Some metadata field
       block: |
         <span>Filter form controls</span>
   open:
     data:
-      heading_text: Filter by something
+      heading_text: Some metadata field
       open: true
       block: |
         <span>Filter form controls open by default</span>
+  with_visually_hidden_heading_prefix:
+    description: Prefix the heading text with visually hidden text for screenreaders to make it more descriptive.
+    data:
+      heading_text: Some metadata field
+      visually_hidden_heading_prefix: Filter by
+      block: |
+        <span>Filter form controls</span>
   status_text:
     data:
-      heading_text: Filter by something
+      heading_text: Some metadata field
       status_text: 1 Selected
       block: |
         <span>Filter form controls with status text</span>
