Enable `rubocop-rspec`
The test suite on this app is in a poor state, and not really helped by
the fact that the RSpec plugin for Rubocop isn't enabled.

This commit is 99% Rubocop autocorrection being run, with the following
handful of manual fixes:
- Malformed spec filenames meaning they're not actually run (e.g. spec
  for the no longer existing `DocumentList` component that's no longer
  needed wasn't deleted because it never ran anyway, and spec for
  `TitleContextHelper` had lots of failures because it relied on a
  renamed stubbing method)
- Some specs had repeated tests and/or context names that needed
  removing or renaming

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ inherit_gem:
   rubocop-govuk:
     - config/default.yml
     - config/rails.yml
+    - config/rspec.yml
 
 inherit_mode:
   merge:
@@ -16,3 +17,17 @@ inherit_mode:
 #
 # See https://github.com/alphagov/rubocop-govuk/blob/main/CONTRIBUTING.md
 # **************************************************************
+
+# rubocop-rspec was not enabled on this project for most of its life. We autocorrected most
+# violations, but the following common rule violations can't be autocorrected and should be fixed
+# manually eventually:
+RSpec/ContextWording:
+  Enabled: false
+RSpec/InstanceVariable:
+  Enabled: false
+RSpec/NamedSubject:
+  Enabled: false
+RSpec/NoExpectationExample: # Some specs use methods to set up expectations
+  Enabled: false
+RSpec/VerifiedDoubles:
+  Enabled: false
