Filter summary: Use consistent "reset" terminology
The filter panel component and `FiltersPresenter` both call the "clear
all" link a "reset" link, so this updates the summary component to be
consistent with that terminology.

--- a/app/views/components/docs/filter_summary.yml
+++ b/app/views/components/docs/filter_summary.yml
@@ -12,8 +12,8 @@ accessibility_criteria: |
 examples:
   default:
     data:
-      clear_all_href: "#"
-      clear_all_text: "Clear all filters"
+      reset_link_href: "#"
+      reset_link_text: "Clear all filters"
       heading_level: 3
       heading_text: "Selected filters"
       filters: [
