--- a/app.json
+++ b/app.json
@@ -43,6 +43,9 @@
   "image": "heroku/ruby",
   "buildpacks": [
     {
+      "url": "https://github.com/heroku/heroku-buildpack-nodejs"
+    },
+    {
       "url": "https://github.com/heroku/heroku-buildpack-ruby"
     }
   ],
